[package]
name = "corr-solver-rs"
version = "0.1.0"
edition = "2021"
description = "Correlation Solver in Rust"
repository = "https://github.com/luk036/corr-solver-rs"
license = "MIT OR Apache-2.0"

[dependencies]
ellalgo-rs = "0.1.8"
lmi-solver-rs = "0.1.2"
ndarray = "0.17.2"
rand = "0.8"
rand_distr = "0.6"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dev-dependencies]
approx_eq = "0.1.8"
